move to the google-1.7 formatting